--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,7 +1,7 @@
 nano variables.json.example
 {
   "platform_type": "DONT MAKE HERE PLATFORM TYPE. WILL NOT WORK",
-  "service_account_key_file": "./key.json",
+  "service_account_key_file": "key.json",
   "image_labels": "image:label",
   "zone": "ru-central1-a",
   "folder_id": "examples",
