--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 variables.json
 /var/www/ServiceAccountDirWithKey/key.json
+
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+.terraform/
