--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -4,7 +4,6 @@ service_account_key_file = "key.json"
 cloud_id = "cloud_id_xxxxxxxx"
 folder_id = "folder_id_xxxxxx"
 subnet_id = "subnet_id_xxxxxx"
-image_id = "fd82t5k1lbh1pgjspfu9"
+image_id = "xxxxxxxxxxxxxxxxxx"
 ssh_keys = "ssh-rsa XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX= ubuntu"
 private_key = "ubuntu"
-yandex = "yandex"
