--- a/terraform/stage/terraform.tfvars.example
+++ b/terraform/stage/terraform.tfvars.example
@@ -4,6 +4,7 @@ service_account_key_file = "key.json"
 cloud_id = "cloud_id_xxxxxxxx"
 folder_id = "folder_id_xxxxxx"
 subnet_id = "subnet_id_xxxxxx"
-image_id = "xxxxxxxxxxxxxxxxxx"
+image_id = "fd82t5k1lbh1pgjspfu9"
 ssh_keys = "ssh-rsa XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX= ubuntu"
 private_key = "ubuntu"
+yandex = "yandex"
