ansible-1. Fitting tests. Try 3

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,6 @@
 inventory = ./inventory.yml
 #inventory = ./yc-inventory.py
 remote_user = ubuntu
-private_key_file = ~/.ssh/yc
+private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
