--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
   "platform_type": "DONT MAKE HERE PLATFORM TYPE. WILL NOT WORK",
-  "service_account_key_file": "key.json",
+  "service_account_key_file": "packer/key.json.example",
   "image_labels": "image:label",
   "zone": "ru-central1-a",
   "folder_id": "examples",
@@ -12,4 +12,7 @@
   "use_ipv4_nat": "true",
   "ruby": "./scripts/install_ruby.sh",
   "mongo": "./scripts/install_mongodb.sh"
+  "instance_cores": "2",
+  "instance_mem_gb": "2",
+  "subnet_id": "your_subnet_id"
 }
