--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -14,3 +14,6 @@ inventory_plugins=./plugins/inventory
 [inventory]
 enable_plugins = yc_compute
 #####
+
+remote_tmp = ~/tmp
+#remote_tmp     = /tmp/${USER}/ansible
