--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,19 +1,23 @@
 [defaults]
 remote_user = ubuntu
-private_key_file = ~/.ssh/yc
+private_key_file = ~/.ssh/ус
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+vault_password_file = ~/otus/devops/vault.key
 
-# inventory = ./inventory.yml
-# inventory = ./yc-inventory.py
+
+# inventory = ./old/inventory.yml
+# inventory = ./old/yc-inventory.py
 
 #### use yc_compute plugin
-inventory = ./yc_compute.yml
+inventory = ./environments/stage/yc_compute.yml
 inventory_plugins=./plugins/inventory
 
 [inventory]
 enable_plugins = yc_compute
 #####
 
-remote_tmp = ~/tmp
-#remote_tmp     = /tmp/${USER}/ansible
+[diff]
+always = True
+context = 5
