--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 remote_user = ubuntu
-private_key_file = ~/.ssh/ус
+private_key_file = ~/.ssh/yc
 host_key_checking = False
 retry_files_enabled = False
 roles_path = ./roles
