--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,10 +8,10 @@ vault_password_file = ~/otus/devops/vault.key
 
 
 # inventory = ./old/inventory.yml
-# inventory = ./old/yc-inventory.py
+inventory = ./old/yc-inventory.py
 
 #### use yc_compute plugin
-inventory = ./environments/stage/yc_compute.yml
+#inventory = ./environments/stage/yc_compute.yml
 inventory_plugins=./plugins/inventory
 
 [inventory]
