--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,17 +6,21 @@ retry_files_enabled = False
 roles_path = ./roles
 vault_password_file = ~/otus/devops/vault.key
 
+[strengthening rights]
+become = yes
 
 # inventory = ./old/inventory.yml
-inventory = ./old/yc-inventory.py
+# inventory = ./old/yc-inventory.py
 
-#### use yc_compute plugin
-#inventory = ./environments/stage/yc_compute.yml
+[use yc_compute plugin]
+inventory = ./environments/stage/yc_compute.yml
 inventory_plugins=./plugins/inventory
 
 [inventory]
 enable_plugins = yc_compute
-#####
+
+[temp folder not in root folder?]
+remote_tmp = /tmp
 
 [diff]
 always = True
