--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -13,11 +13,11 @@ become = yes
 # inventory = ./old/yc-inventory.py
 
 [use yc_compute plugin]
-inventory = ./environments/stage/yc_compute.yml
-inventory_plugins=./plugins/inventory
+#inventory = ./environments/stage/yc_compute.yml
+#inventory_plugins=./plugins/inventory
 
 [inventory]
-enable_plugins = yc_compute
+#enable_plugins = yc_compute
 
 [temp folder not in root folder?]
 remote_tmp = /tmp
