--- a/ansible/roles/app/meta/main.yml
+++ b/ansible/roles/app/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Nikita A. Selin
+  description: Application deploy (OTUS DevOps Homework)
+  company: Home
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
